READABLE LINKS ZOMG HACKER NEWS TRAFFIC FIX THINGS

--- a/source/assets/stylesheets/_index.scss
+++ b/source/assets/stylesheets/_index.scss
@@ -29,6 +29,14 @@
   }
 }
 
+.guides a {
+  color: $action-color;
+
+  &:hover {
+    color: darken($action-color, 10%);
+  }
+}
+
 .demo {
   @extend %section;
   padding-top: $base-spacing;
